--- a/client/src/components/styles/GameBoard.scss
+++ b/client/src/components/styles/GameBoard.scss
@@ -2,14 +2,30 @@ $boardColor: #58e07a;
 $riverColor: #58b9e0;
 $castleColor: #fffab0;
 
+$pieceSelectionColor: yellow;
+$moveSelectionColor: red;
+
 .board{
+    margin:auto;
+    margin-bottom: 20px;
+    max-width:600px;
+    max-height:600px;
     outline: black 2px solid;
     display: flex;
     flex-direction: column;
+    // align-content:stretch;
+    * {
+        flex-grow:1;
+        flex-shrink:1;
+        *{
+            flex-grow:1;
+            flex-shrink:1;
+        }
+    }
     .row{
         display: flex;
-        justify-content: center;
         .piece {
+            font-size:30px;
             background: $boardColor;
             display: flex;
             justify-content: center;
@@ -19,22 +35,32 @@ $castleColor: #fffab0;
             outline: black 1px solid;
             transition: .2s;
             cursor: pointer;
+            
             &.river {
-                background:$riverColor;
+                background: $riverColor;
             }
             &.castle {
                 background: $castleColor;
             }
             &.selected {
-                background: yellow;
+                background: $pieceSelectionColor;
             }
             &.move {
-                background:red;
+                background:$moveSelectionColor;
             }
+
             &:hover {
-                background: yellow;
+                background: $pieceSelectionColor;
+                &.desiredMoves{
+                    background: $moveSelectionColor;
+                }
             }
 
         }
+    }
+}
+.buttons {
+    * {
+        margin:5px;
     }
 }
