--- a/client/src/components/styles/GameBoard.scss
+++ b/client/src/components/styles/GameBoard.scss
@@ -6,14 +6,12 @@ $pieceSelectionColor: yellow;
 $moveSelectionColor: red;
 
 .board{
-    margin:auto;
     margin-bottom: 20px;
     max-width:600px;
     max-height:600px;
     outline: black 2px solid;
     display: flex;
     flex-direction: column;
-    // align-content:stretch;
     * {
         flex-grow:1;
         flex-shrink:1;
@@ -22,8 +20,9 @@ $moveSelectionColor: red;
             flex-shrink:1;
         }
     }
-    .row{
+    .board_row {
         display: flex;
+        flex-wrap:nowrap;
         .piece {
             font-size:30px;
             background: $boardColor;
