--- a/client/src/components/styles/Form.scss
+++ b/client/src/components/styles/Form.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-content: center;
   align-items: center;
-  .page_title, .form_input, button {
+  .page_title, .form_input, .btn {
     width:350px;
     display:flex;
     align-items: baseline;
@@ -26,7 +26,7 @@
     margin-bottom: 15px;
     border-bottom: $backgroundColor 3px solid;
   }
-  button {
+  .btn {
     display:block;
     background-color: $backgroundColor;
     text-align:center;
