some mostly insignificant styling changes. centered some stuff, increased default page font size, added colored drop shadows to pieces to differentiate players. also changed the background color but am not particularly attached to it

--- a/client/src/components/styles/GameBoard.scss
+++ b/client/src/components/styles/GameBoard.scss
@@ -5,6 +5,9 @@ $castleColor: #fffab0;
 $pieceSelectionColor: yellow;
 $moveSelectionColor: red;
 
+$playerOneColor: red;
+$playerTwoColor: blue;
+
 .board{
     margin-bottom: 20px;
     max-width:600px;
@@ -34,7 +37,12 @@ $moveSelectionColor: red;
             outline: black 1px solid;
             transition: .2s;
             cursor: pointer;
-            
+            &.one {
+                text-shadow: 2px 2px $playerOneColor;
+            }
+            &.two {
+                text-shadow: 2px 2px $playerTwoColor;
+            }
             &.river {
                 background: $riverColor;
             }
