--- a/client/src/components/styles/Form.scss
+++ b/client/src/components/styles/Form.scss
@@ -1,12 +1,12 @@
 @import "./variables";
 
 #form {
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
   align-items: center;
+  padding-bottom: 200px;
   .page_title, .form_input, .btn {
     width:350px;
     display:flex;
@@ -14,6 +14,9 @@
     label {
       margin-right:auto;
       min-width: 80px;
+      font-size: 17px;
+      text-align: right;
+      padding-right: 8px;
     }
     input {
       margin-left:auto;
