--- a/client/src/components/styles/Game.scss
+++ b/client/src/components/styles/Game.scss
@@ -4,7 +4,6 @@
   height:100vh;
   width:100vw;
   background-color: $backgroundColor;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,8 +37,9 @@
         color: black;
         font-weight: 600;
         text-decoration: none;
-        margin: 0px 15px;
+        margin: 0px 8px;
         transition: .2s ease-in-out;
+        font-size: 16px;
         &:hover {
           transform: scale(1.2);
         }
@@ -47,13 +47,17 @@
     }
   }
   #page_container {
+    display: flex;
+    justify-content: center;
     background: $foregroundColor;
     height: 85%;
     width: 80%;
     max-width: 1000px;
     border-radius: 15px;
     box-shadow: 10px 10px darken($backgroundColor, 25%);
-    padding: 10px;
+    padding: 25px;
     box-sizing: border-box;
+    text-align: center;
+    font-size: 25px;
   }
 }
