--- a/client/src/components/styles/GameBoard.scss
+++ b/client/src/components/styles/GameBoard.scss
@@ -9,6 +9,9 @@ $playerOneColor: red;
 $playerTwoColor: blue;
 
 .board{
+    p {
+        margin: 0px;
+    }
     margin-bottom: 20px;
     max-width:600px;
     max-height:600px;
