* Invitations.scss: Added formatting for tables and cards so they would fit better with the site * Invitations.js: Added tables to display sent/received invitations, added ability for view invitations button to say "refresh invitations" after being pressed once * DatabaseHandler.java: Made it so that lists get an item named "EMPTY" if they are empty instead of throwing an error

--- a/client/src/components/styles/Invitations.scss
+++ b/client/src/components/styles/Invitations.scss
@@ -2,6 +2,14 @@
 
 #invitations {
 
+  .table_condensed{
+    font-size: 15px;
+  }
+
+  .card_condensed{
+    font-size: 20px;
+  }
+
   .btn {
     background-color: $backgroundColor;
     text-align:center;
