change board color, change super pawn icon when a pawn become super pawn

--- a/client/src/components/styles/GameBoard.scss
+++ b/client/src/components/styles/GameBoard.scss
@@ -1,6 +1,6 @@
-$boardColor: #58e07a;
-$riverColor: #58b9e0;
-$castleColor: #fffab0;
+$boardColor: #C9CEDA;//#AEC1CA; // #E9D4E2; // #E9D4E2;
+$riverColor: #57A3D8; //61B0E6;//#58b9e0; // 57A3D8
+$castleColor: #809099;//#C5A4DA;//#C5A4DA;
 
 $pieceSelectionColor: yellow;
 $moveSelectionColor: red;
