--- a/client/src/components/styles/Dashboard.scss
+++ b/client/src/components/styles/Dashboard.scss
@@ -4,9 +4,18 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  #features {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    * {
+      flex: 1 1 auto;
+    }
+  }
+
 }
 
-#delete {
+.delete {
   margin-top:auto;
   font-size: 18px;
   text-decoration: underline;
