--- a/client/src/components/styles/Invitations.scss
+++ b/client/src/components/styles/Invitations.scss
@@ -7,6 +7,12 @@
   }
 
   .card_condensed{
+    .card-title {
+      font-size:16px;
+      margin: 0px 2px 10px;
+    }
+    margin:10px;
+    padding:10px 10px 0px;;
     font-size: 15px;
   }
 
@@ -25,6 +31,20 @@
   }
 
   #search, #invites {
+    .invite_button {
+      margin:auto 10px auto auto;
+    }
+    .action_button {
+      float: right;
+      margin:auto 10px auto auto;
+      font-size:18px;
+      transition: .3s;
+      cursor: pointer;
+      color: darken($backgroundColor, 30%);
+      &:hover {
+        color: darken($backgroundColor, 40%);
+      }
+    }
     //max-width: 300px;
     margin: 20px;
     #subtitle {
@@ -62,17 +82,7 @@
         p {
           margin:auto 10px;
         }
-        .invite_button {
-          float: right;
-          margin:auto 25px auto auto;
-          font-size:18px;
-          transition: .3s;
-          cursor: pointer;
-          color: darken($backgroundColor, 30%);
-          &:hover {
-            color: darken($backgroundColor, 40%);
-          }
-        }
+
       }
     }
   }
