added status filter to game search and general styling

--- a/client/src/components/styles/Dashboard.scss
+++ b/client/src/components/styles/Dashboard.scss
@@ -4,25 +4,39 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+
   #features {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
     * {
       flex: 1 1 auto;
     }
   }
-
 }
-
+.header {
+  margin: 0px auto;
+  p {
+    margin: 5px 0px;
+  }
+}
 .delete {
-  margin-top:auto;
-  font-size: 18px;
+  background-color: lighten($backgroundColor, 15%);
+  font-weight:bold;
+  width:auto;
+  margin:auto 3px;
+  font-size: 15px;
   text-decoration: underline;
   cursor: pointer;
-  color: darken($backgroundColor, 25%);
-  transition: .2s;
+  color: darken($backgroundColor, 30%);
+  * {
+    transition: .1s;
+  }
   &:hover {
-    color: darken($backgroundColor, 35%)
+    * {
+      background-color: darken($backgroundColor, 5%);
+      color: darken($backgroundColor, 35%)
+    }
   }
 }
