--- a/client/src/components/styles/Invitations.scss
+++ b/client/src/components/styles/Invitations.scss
@@ -28,6 +28,7 @@
   #viewsearch {
     display:flex;
     flex-wrap: wrap;
+    margin-bottom: 20px;
   }
 
   #search, #invites {
@@ -46,7 +47,7 @@
       }
     }
     //max-width: 300px;
-    margin: 20px;
+    margin: 5px 20px;
     #subtitle {
       font-size: 25px;
       margin-bottom: 15px;
