--- a/client/src/components/styles/Game.scss
+++ b/client/src/components/styles/Game.scss
@@ -1,6 +1,17 @@
 @import "./variables";
 
 #Application {
+  a {
+    font-weight:bold;
+    font-size: 15px;
+    text-decoration: underline;
+    cursor: pointer;
+    color: darken($backgroundColor, 30%);
+    transition: .1s;
+    &:hover {
+      color: darken($backgroundColor, 40%)
+    }
+  }
   height:100vh;
   width:100vw;
   background-color: $backgroundColor;
